1999-09-29  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/divrem_2.c: Clean up comments.

1999-09-23  Torbjorn Granlund  <tege@swox.com>

	* mpz/tests/Makefile.in: Use move-if-change when generating binaries.
	* mpf/tests/Makefile.in: Likewise.
	* mpq/tests/Makefile.in: Likewise.
	* mpz/tests/move-if-change: New file.
	* mpf/tests/move-if-change: New file.
	* mpq/tests/move-if-change: New file.
	
	* gmp.h (mpn_incr_u): New macro (from mpn/generic/mul_n.c).
	(mpn_decr_u): New macro.

	* mpn/generic/mul_n.c (mpn_incr): Delete.
	* mpn/generic/mul_n.c: Update usages mpn_incr => mpn_incr_u.
	* mpn/generic/divrem_newt.c: Use mpn_incr_u and mpn_decr_u instead of
	mpn_add_1 and mpn_sub_1.
	* mpn/generic/sqrtrem.c: Likewise.
	* mpz/cdiv_q_ui.c: Likewise.
	* mpz/cdiv_qr_ui.c: Likewise.
	* mpz/fdiv_q_ui.c: Likewise.
	* mpz/fdiv_qr_ui.c: Likewise.

	* mpn/generic/sqrtrem.c: Start single-limb Newton iteration from 18
	bits.

1999-07-27  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/divrem_1.c (__gmpn_divrem_1n): New function.

	* mpn/generic/divrem_2.c: New file, code from divrem.c, `case 2:'.
	* mpn/Makefile.in: Compile divrem_2.c.
	* make.bat: Compile divrem_2.c.
	* mpn/configure.in (functions): Add divrem_2.
	* gmp.h: Declare mpn_divrem_2.
	
	* mpn/generic/divrem.c: Delete special cases, handle just divisors
	of more than 2 limbs.
	* gmp.h (mpn_divrem): Call mpn_divrem_1, mpn_divrem_2, as appropriate.

	* mpn/generic/divrem.c: Rework variable usage for better register
	allocation.

1999-07-26  Torbjorn Granlund  <tege@swox.com>

	* mpn/alpha/ev5/add_n.s: Rewrite for better ev6 speed.
	* mpn/alpha/ev5/sub_n.s: Likewise.

1999-07-21  Torbjorn Granlund  <tege@swox.com>

	* longlong.h (alpha): Define umul_ppmm for cc.

	* gmp-impl.h (DItype, UDItype): Define for non-gcc if _LONGLONG is
	defined.

1999-07-15  Torbjorn Granlund  <tege@swox.com>

	* longlong.h (powerpc64 count_leading_zeros): Fix typo.
	(powerpc64 add_ssaaaa): Fix typos.